--- a/github-pages-stripe-checkout-gh-pages/index.html
+++ b/github-pages-stripe-checkout-gh-pages/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Stripe Checkout Sample</title>
+    <title>Stripe Checkout Sample Test</title>
     <meta name="description" content="A demo of Stripe client-only Checkout" />
 
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
@@ -25,19 +25,19 @@
               data-checkout-mode="payment"
               data-price-id="sku_GU4JYXyvvRb2sX"
             >
-              Donate $5.00 once
+              Donate $50.00 once
             </button>
             <button
               data-checkout-mode="payment"
               data-price-id="sku_GU4KO8nfdg8G2Z"
             >
-              Donate $15.00 once
+              Donate $150.00 once
             </button>
             <button
               data-checkout-mode="payment"
               data-price-id="sku_GU4LB0wBViiYsm"
             >
-              Donate $50.00 once
+              Donate $500.00 once
             </button>
           </section>
           <section class="container">
